--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_name
-spring.datasource.username=your_postgres_username
-spring.datasource.password=your_postgres_password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:mem:some-postgres
+spring.datasource.username=h2
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
