--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>6.1.1</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version> <!-- Replace with the latest version -->
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
