--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:h2:mem:some-postgres
 spring.datasource.username=h2
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
+#spring.datasource.username=bank_user
+#spring.datasource.password=your_password
+#spring.datasource.driver-class-name=org.postgresql.Driver
