--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,17 @@
 			<version>1.18.28</version> <!-- Replace with the latest version -->
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.7.14</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>3.1.3</version>
+		</dependency>
 
 	</dependencies>
 
